--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,3 +8,12 @@ services:
       - "8000:8000"
     environment:
       - OPENAI_API_KEY=your_openai_api_key
+
+  frontend:
+    build:
+      context: ./frontend
+      dockerfile: ../Dockerfile.frontend
+    ports:
+      - "8501:8501"
+    depends_on:
+      - backend
