--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,3 +17,17 @@ services:
       - "8501:8501"
     depends_on:
       - backend
+
+# Dockerfile.backend
+FROM python:3.10
+WORKDIR /app
+COPY . .
+RUN pip install --no-cache-dir -r requirements.txt
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+
+# Dockerfile.frontend
+FROM python:3.10
+WORKDIR /app
+COPY . .
+RUN pip install --no-cache-dir -r requirements.txt
+CMD ["streamlit", "run", "app.py", "--server.port=8501", "--server.address=0.0.0.0"]
